src/Tests/InstrEngineTests/InstrEngineTests/EmbeddedResources/InvalidCSharp/InvalidCSharp.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <TargetFrameworks>net7.0</TargetFrameworks>
    <OutputType>library</OutputType>
    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
    <DebugType>Full</DebugType>
  </PropertyGroup>
  <PropertyGroup>
    <NetCoreVersion>7.0.0-preview.4.22229.4</NetCoreVersion>
    <ILAsmToolPath>$(NuGetPackageRoot)\microsoft.netcore.ilasm\$(NetCoreVersion)\runtimes\native</ILAsmToolPath>
  </PropertyGroup>
  <ItemGroup>
    <PackageReference Include="Microsoft.NET.Sdk.IL" Version="$(NetCoreVersion)" />
    <PackageReference Include="Microsoft.NETCore.ILAsm" Version="$(NetCoreVersion)" />
  </ItemGroup>
  <ItemGroup>
    <Compile Include="RefInvalidCSharp.il" />
    <Compile Include="ByRefLikeInvalidCSharp.il" />
  </ItemGroup>
</Project>
